--- a/main.html
+++ b/main.html
@@ -7,7 +7,21 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<form action="/submit-feedback" method="post">
+		<label for="name">Name</label>
+		<input type="text" id="name" minlength="3" maxlength="50" required>
+		<br>
+		<label for="portfolio">Portfolio</label>
+		<input type="url" id="portfolio" name="portfolio" required>
+		<br>
+		<label for="favColor">Favorite Color</label>
+		<input type="color">
+		<br>
+		<label for="likeness">Likeness</label>
+		<input type="range" min ="1" max="100">
+
+		<input type="submit" value="Submit Feedback">
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
