--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<form action="/submit-feedback" method="post">
+		<h1>Feedback Form</h1>
 		<label for="name">Name</label>
 		<input type="text" id="name" minlength="3" maxlength="50" required>
 		<br>
@@ -19,7 +20,6 @@
 		<br>
 		<label for="likeness">Likeness</label>
 		<input type="range" min ="1" max="100">
-
 		<input type="submit" value="Submit Feedback">
 	</form>
     <script type="text/javascript" src="./script.js">
