--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 		<input type="url" id="portfolio" name="portfolio" required>
 		<br>
 		<label for="favColor">Favorite Color</label>
-		<input type="color">
+		<input type="color" id="favColor" name="favColor">
 		<br>
 		<label for="likeness">Likeness</label>
 		<input type="range" min ="1" max="100">
