--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 		<input type="color" id="favColor" name="favColor">
 		<br>
 		<label for="likeness">Likeness</label>
-		<input type="range" min ="1" max="100">
+		<input type="range" id="likeness" name="likeness" min ="1" max="100">
 		<input type="submit" value="Submit Feedback">
 	</form>
     <script type="text/javascript" src="./script.js">
